--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -48,6 +48,16 @@ services:
     ports:
       - 8529:8529
 
+  arangodb2:
+    image: arangodb:latest
+    container_name: database_arangodb_exam_2
+    environment:
+      ARANGO_ROOT_PASSWORD: password
+    volumes:
+      - arangodb2_data:/var/lib/arangodb3
+    ports:
+      - 8530:8529 # Map internal port 8529 to external port 8530
+
   redis:
     image: redis:latest
     container_name: database_redis_exam
@@ -59,4 +69,5 @@ services:
 volumes:
   mysql_data:
   arangodb_data:
+  arangodb2_data:  # Added a separate volume for arangodb2
   redis_data:
